# my-cmake-layout

./: .gitignore  CMakeLists.txt  main.cpp
static/: CMakeLists.txt
static/amazing/: amazing.cpp  amazing.hpp
static/say-hello/: hello.cpp  hello.hpp  shit.cpp
